Closed Bug 94889 Opened 24 years ago Closed 24 years ago

accessing mResponseHead after TakeResponseHead calles [@ nsHttpResponseHead::SetContentLength ]

Categories

(Core :: Networking: HTTP, defect)

defect
Not set
critical

Tracking

()

VERIFIED FIXED

People

(Reporter: bulbul, Assigned: darin.moz)

References

()

Details

(Keywords: crash, topcrash)

Crash Data

Cannot view page at <http://listings.ebay.com>. The quality feedback agent appears, but the browser doesn't not actually crash and remains usable even after the feedback message is sent. This makes the eBay site unusable, since none of the auction listing pages (not only this particular page) can be viewed. I'm using Linux 2001081106.
Ths came out of the fix for bug 89113. We can't access mResponseHead, because TakeResponseHead has been called by then. That was my suggestion, oops. We still need to set that though, because of the cache. Or are we too late for the cache, as well? We could QI our nsIInterfaceRequestor to the httpchannel, but, yuck. Other suggestions? -> darin, critical, +crash Stack trace: #0 nsHttpResponseHead::SetContentLength (this=0x0, len=24741) at nsHttpResponseHead.cpp:37 #1 0x40505f8a in nsHttpTransaction::HandleContent (this=0x8147630, buf=0x8156138 "=\"http://include.ebay.com/aw/pics/js/cobrand/ads/layer.js\"></SCRIPT></body></html>HTTP/1.0 200 OK\r\nServer: Microsoft-IIS/4.0\r\nDate: Sat, 11 Aug 2001 18:37:16 GMT\r\n\r\n4)</a><br></font>\n<font size =\"3\">\n"..., count=165, countRead=0x4077f6d0) at nsHttpTransaction.cpp:484 #2 0x40506a6d in nsHttpTransaction::Read (this=0x8147630, buf=0x8156138 "=\"http://include.ebay.com/aw/pics/js/cobrand/ads/layer.js\"></SCRIPT></body></html>HTTP/1.0 200 OK\r\nServer: Microsoft-IIS/4.0\r\nDate: Sat, 11 Aug 2001 18:37:16 GMT\r\n\r\n4)</a><br></font>\n<font size =\"3\">\n"..., count=4096, bytesWritten=0x4077f6d0) at nsHttpTransaction.cpp:768 etc.
Assignee: asa → darin
Severity: normal → critical
Status: UNCONFIRMED → NEW
Component: Browser-General → Networking: HTTP
Ever confirmed: true
Keywords: crash
OS: Linux → All
QA Contact: doronr → tever
Hardware: PC → All
Summary: cannot view eBay listings pages, feedback agent fired up → accessing mResponseHead after TakeResponseHead calles [ @ nsHttpResponseHead::SetContentLength ]
The offending line has been removed, and darin will go back to bug 89113 to rework that part of the fix. r=mozbot, sr=darin on the checkin.
Status: NEW → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
*** Bug 94957 has been marked as a duplicate of this bug. ***
This is showing up on the topcrash radar. +topcrash for tracking
Keywords: topcrash
Status: RESOLVED → VERIFIED
*** Bug 95630 has been marked as a duplicate of this bug. ***
Summary: accessing mResponseHead after TakeResponseHead calles [ @ nsHttpResponseHead::SetContentLength ] → accessing mResponseHead after TakeResponseHead calles [@ nsHttpResponseHead::SetContentLength ]
Crash Signature: [@ nsHttpResponseHead::SetContentLength ]
You need to log in before you can comment on or make changes to this bug.