Bug 94889 - comment out part of bug 89133's fix to avoid what will be a topcrash. r=mozbot, sr=darin